methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(nbPas:Int,versLAvant:Boolean){
^MethodsArgs:2: error: not found: value nbPas
move(nbPas:Int,versLAvant:Boolean){
     ^MethodsArgs:2: error: not found: value versLAvant
move(nbPas:Int,versLAvant:Boolean){
               ^MethodsArgs:4: error: not found: value versLAvant
  if (versLAvant==true){
      ^MethodsArgs:5: error: not found: value nbPas
    for (n <- 1 to nbPas){
                   ^MethodsArgs:10: error: not found: value nbPas
    for (n<- 1 to nbPas){
                  ^